chore: fix wrapping of options in product selector

--- a/themes/Integrative Nutrition/css/objects/jd-shopify-cart.css
+++ b/themes/Integrative Nutrition/css/objects/jd-shopify-cart.css
@@ -492,6 +492,11 @@ select.jd-cart-rec-select {
   font: var(--font--paragraph);
 }
 
+.jd-shopify-option {
+  display: flex;
+  align-items: baseline;
+}
+
 .jd-shopify-option-wrap {
   display: flex;
   flex-wrap: wrap;
